--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <img src="pexels-harsh-kushwaha-804217-1721558(1).jpg" alt="banner picture">
             </div>
             <div class="text">
-                <span class="lg">SUMMER</span> <br> <span class="sm">COLLECTIONS <br> <span class="sm2">ARE HERE</span> </span><br>
+                <span class="lg">WINTER</span> <br> <span class="sm">COLLECTIONS <br> <span class="sm2">ARE HERE</span> </span><br>
                 <button class="btn">
                         Buy Now
                 </button>
